@@ -21,8 +21,14 @@
 /// Utility for building a URL or POST argument string.
 @interface NSDictionary (GTMNSDictionaryURLArgumentsAdditions)
 
+/// Returns a dictionary of the decoded key-value pairs in a http arguments
+/// string of the form key1=value1&key2=value2&...&keyN=valueN.
+/// Keys and values will be unescaped automatically.
+/// Only the first value for a repeated key is returned.
++ (NSDictionary *)gtm_dictionaryWithHttpArgumentsString:(NSString *)argString;
+
 /// Gets a string representation of the dictionary in the form
-/// key1=value1&key2&value2&...&keyN=valueN, suitable for use as either
+/// key1=value1&key2=value2&...&keyN=valueN, suitable for use as either
 /// URL arguments (after a '?') or POST body. Keys and values will be escaped
 /// automatically, so should be unescaped in the dictionary.
 - (NSString *)gtm_httpArgumentsString;
